static/css/header.css
:root{
    --cerise: #e83d84;
    --cerise-light: #ec5f99; /*rgba(232,19,108,0.8);*/
    --grey: rgba(69, 69, 69, 1);
    --grey-transparent: rgba(69, 69, 69, 0.8);
    --hover-color: var(--cerise);
}

header {
    background-color: var(--grey);
    border: 0em;
    border-bottom: 0.5em;
	border-style: solid;
	border-color: var(--cerise);
    position: fixed;
    top: 0;
    width: 100%;
}

#ddagen-logo-header {
    height: 1.5em;
    margin: 2%;
}

.navigation-bar {
    overflow: hidden;
}

.navigation-bar a {
    float: left;
    color: #f2f2f2;
    padding: 1%;
}

.navigation-bar a.active {
    background-color: #04AA6D;
    color: white;
}

.navigation-bar a:not(:first-child) {
    display: none;
}

#header-hamburger {
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    width: 1.5em;
    height: 1.5em;
    margin: 2%;
    padding: 0px;
}

.navigation-bar.responsive {
    position: fixed;
    top: 0;
    width: 100%;
}

.responsive #header-hamburger {
    position: absolute;
    right: 0;
    top: 0;
}

.navigation-bar.responsive a {
    float: none;
    display: block;
    text-align: left;
}

/* For everything larger than mobile */
@media only screen and (min-width: 600px) {

    header {
        font-size: 2rem;
        display: flex;
        align-items: center;
        background-color: var(--grey-transparent);
    }

    .navigation-bar #header-hamburger {
        display: none;
    }

    .navigation-bar a:not(:first-child) {
        display: block;
    }

    .navigation-bar a {
        padding: 0.5% 0.5% 0.5% 0.5%;
    }

    .navigation-bar a:hover{
        background-color: var(--hover-color);
    }

    #ddagen-logo-header {
        height: 1.5em;
        margin: 0em;
        margin-left: 1%;
        margin-right: 1%;
    }

    #language {
        position: absolute;
        right: 0;
    }
}

